<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.AboutUsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            app:cardCornerRadius="5dp"
            app:cardElevation="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/history" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:text="Welcome message - YouTube"
                android:textStyle="bold"
                android:textColor="#000"
                android:gravity="center"
                />
                <TextView
                    android:id="@+id/link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="21sp"
                    android:text="Link"
                    android:textColor="#000"
                    android:gravity="center"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"

                    android:text="@string/history"

                    android:textColor="@android:color/holo_red_light"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/history1"
                    android:textColor="@android:color/black"
                    android:textSize="19sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/history2"
                    android:textColor="@android:color/black"
                    android:textSize="19sp" />
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            android:layout_margin="10dp"

            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/what_we_believe"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/WhatWeBelieve"
                    android:textColor="@android:color/black"
                    android:textSize="19sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/WhatWeBelieve1"
                    android:textColor="@android:color/black"
                    android:textSize="19sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/WhatWeBelieve2"
                    android:textColor="@android:color/black"
                    android:textSize="19sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/WhatWeBelieve3"
                    android:textColor="@android:color/black"
                    android:textSize="19sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/WhatWeBelieve4"
                    android:textColor="@android:color/black"
                    android:textSize="19sp" />


            </LinearLayout>



        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="5dp"

            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/mission_and_vision"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/MissionandVision"
                    android:textColor="@android:color/black"
                    android:textSize="19sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/MissionandVision1"
                    android:textColor="@android:color/black"
                    android:textSize="19sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/MissionandVision2"
                    android:textColor="@android:color/black"
                    android:textSize="19sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/MissionandVision3"
                    android:textColor="@android:color/black"
                    android:textSize="19sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/MissionandVision4"
                    android:textColor="@android:color/black"
                    android:textSize="19sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/MissionandVision5"
                    android:textColor="@android:color/black"
                    android:textSize="19sp" />
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            android:layout_margin="10dp"

            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="21sp"
                    android:text="@string/pr_arul_s_message"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_red_light"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:text="@string/message1"
                    android:layout_margin="10dp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:text="@string/message"
                    android:layout_margin="10dp"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:text="@string/message2"
                    android:layout_margin="10dp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:text="@string/message3"
                    android:gravity="right"
                    android:layout_margin="10dp"
                    android:textColor="@android:color/black"/>

            </LinearLayout>



        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="5dp"

            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/privacy_statement"
                    android:gravity="center"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="24sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/privacystatement1"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/privacystatement2"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/privacystatement3"
                    android:textColor="@android:color/black"
                    android:textSize="19sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/privacystatement"
                    android:textColor="@android:color/black"
                    android:textSize="19sp"
                    />
            </LinearLayout>


        </android.support.v7.widget.CardView>

    </LinearLayout>




</android.support.v4.widget.NestedScrollView>