<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_margin="1dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:src="@drawable/ic_add_location_black_24dp"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Address"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="18sp" />
                 </LinearLayout>
                   <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="vertical">


                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:text="@string/address"
                           android:gravity="center"
                           android:textStyle="bold"
                           android:textColor="@android:color/holo_blue_dark"
                           android:textSize="18sp" />
                       <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center"
                       android:text="@string/address4"
                       android:gravity="center"
                       android:textStyle="bold"
                       android:textColor="@android:color/holo_blue_dark"
                       android:textSize="18sp" />
                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:gravity="center"
                           android:text="@string/address2"
                           android:textColor="@android:color/holo_blue_dark"
                           android:textSize="18sp"
                           android:textStyle="bold" />
                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:text="@string/address3"
                           android:gravity="center"
                           android:textStyle="bold"
                           android:textColor="@android:color/holo_blue_dark"
                           android:textSize="18sp" />
                    </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_margin="1dp"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_phone_android_black_24dp"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Mobile"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="18sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="+44 (0) 75544 46363"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_margin="1dp"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_email_black_24dp"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Email"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="18sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"

                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/email1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="arul@clg.church"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_margin="1dp"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_language_black_24dp"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Website"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="18sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/webiste"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="www.clg.church"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

           </android.support.v7.widget.CardView>
    </LinearLayout>

        </android.support.v4.widget.NestedScrollView>